--- a/index.html
+++ b/index.html
@@ -25,9 +25,92 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Triple Peaks Coffeshop Logo"
+            class="nav__logo"
+          />
+          <ul class="nav__links">
+            <li>
+              <a href="#recipes" class="nav__link">Recipes</a>
+            </li>
+            <li>
+              <a href="" class="nav__link">Book a table</a>
+            </li>
+            <li>
+              <a href="" class="nav__link">Menu</a>
+            </li>
+            <li>
+              <a href="" class="nav__link nav__link_padding-disabled"
+                >Contacts</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span class="header__span-accent">Specialty coffee</span>in the Triple
+          Peaks Library
+        </h1>
+        <p class="header__description">
+          Welcome to our study zone! We've got the coffee to energize you and
+          the cozy vibes to help you get creative
+        </p>
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Graphic of the inside of the coffee shop"
+          class="header__image"
+        />
+        <div class="header__footer">
+          <div class="header__footer-column_first">
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
+            <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
+          </div>
+          <div class="header__footer-column_last">
+            <p class="header__paragraph">
+              200 Success Avenue, The Town of Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
       <main class="content">
-        <section class="recipes"></section>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for<br />your home-brewing
+            convenience:
+          </p>
+          <div class="recipes__videos">
+            <iframe
+              src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dToDgfIAqjh5_N2e"
+              title="Aeropress recipe video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+              class="recipes__iframe"
+            ></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/st571DYYTR8?si=LJZkaOcodSD8qed3"
+              title="French press recipe video player"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              referrerpolicy="strict-origin-when-cross-origin"
+              allowfullscreen
+              class="recipes__iframe"
+            ></iframe>
+            <p class="recipes__video-caption">Aeropress recipe</p>
+            <p class="recipes__video-caption recipes__video-caption_2">
+              ~5 min
+            </p>
+            <p class="recipes__video-caption recipes__video-caption_3">
+              French press recipe
+            </p>
+            <p class="recipes__video-caption recipes__video-caption_4">
+              ~15 min
+            </p>
+          </div>
+        </section>
         <section class="reservation"></section>
         <section class="menu"></section>
         <section class="about"></section>
