Fixing test failures

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="" class="nav__link">Book a table</a>
+              <a href="#" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a href="" class="nav__link">Menu</a>
+              <a href="#" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="" class="nav__link nav__link_padding-disabled"
+              <a href="#" class="nav__link nav__link_padding-disabled"
                 >Contacts</a
               >
             </li>
@@ -63,12 +63,12 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="header__footer-column_first">
+          <div class="header__footer-column header__footer-column_first">
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
             <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
           </div>
-          <div class="header__footer-column_last">
+          <div class="header__footer-column header__footer-column_last">
             <p class="header__paragraph">
               200 Success Avenue, The Town of Triple Peaks
             </p>
