Adding hrefs to nav links

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
               <a href="#recipes" class="nav__link">Recipes</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Book a table</a>
+              <a href="#reservation" class="nav__link">Book a table</a>
             </li>
             <li>
-              <a href="#" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="#" class="nav__link nav__link_padding-disabled"
+              <a href="#about" class="nav__link nav__link_padding-disabled"
                 >Contacts</a
               >
             </li>
@@ -111,9 +111,9 @@
             </p>
           </div>
         </section>
-        <section class="reservation"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section class="reservation" id="reservation"></section>
+        <section class="menu" id="menu"></section>
+        <section class="about" id="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
