--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li>
-              <a href="#about" class="nav__link nav__link_padding-disabled"
+              <a href="#contacts" class="nav__link nav__link_padding-disabled"
                 >Contacts</a
               >
             </li>
@@ -164,10 +164,130 @@
             </label>
           </form>
         </section>
-        <section class="menu" id="menu"></section>
-        <section class="about" id="about"></section>
+        <section class="menu" id="menu">
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use biodegradable cups. All teas from our collection are $2/cup.
+          </p>
+          <div class="menu__cards">
+            <div class="card">
+              <p class="card__title">Filter</p>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Regular (12 oz) <span class="card__list-divider"></span> $1
+                </li>
+                <li class="card__list-item">
+                  Large (16 oz) <span class="card__list-divider"></span> $1.25
+                </li>
+                <li class="card__list-item">
+                  XL (20 oz) <span class="card__list-divider"></span> $1.5
+                </li>
+                <li class="card__list-item">
+                  Party-size (24 oz, decaf)
+                  <span class="card__list-divider"></span> $1.75
+                </li>
+                <li class="card__list-item card__list-item_last">
+                  Iced Coffee (16 oz)
+                  <span class="card__list-divider"></span> $1.25
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <p class="card__title">Espresso</p>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Macchiato <span class="card__list-divider"></span> $2.25
+                </li>
+                <li class="card__list-item">
+                  Cortado <span class="card__list-divider"></span> $2.5
+                </li>
+                <li class="card__list-item">
+                  Mocha <span class="card__list-divider"></span> $3
+                </li>
+                <li class="card__list-item card__list-item_last">
+                  Sunrise in the Bay Area (decaf)
+                  <span class="card__list-divider"></span> $10
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <p class="card__title">Baked Goods</p>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  Almond Croissant <span class="card__list-divider"></span> $2
+                </li>
+                <li class="card__list-item">
+                  Banana Bread <span class="card__list-divider"></span> $1.75
+                </li>
+                <li class="card__list-item">
+                  Key Lime Pie <span class="card__list-divider"></span> $3
+                </li>
+                <li class="card__list-item">
+                  Blue Velvet Cake
+                  <span class="card__list-divider"></span> $3.75
+                </li>
+                <li class="card__list-item">
+                  Web Cookie <span class="card__list-divider"></span> $2
+                </li>
+                <li class="card__list-item card__list-item_last">
+                  Fresh Bug'uette <span class="card__list-divider"></span> $0.25
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="about" id="about">
+          <h2 class="about__title">About the coffee shop</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Triple Peaks Library. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact &mdash; so
+              we don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer" id="contacts">
+        <div class="footer__content">
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="Triple Espresso Logo"
+            class="footer__logo"
+          />
+          <div class="footer__column">
+            <p class="footer__social-heading">Social media</p>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <img
+                  src="./images/facebook_white.svg"
+                  alt="Facebook icon"
+                  class="footer__social-icon"
+                />
+                <a href="#" class="footer__social-link">Facebook</a>
+              </li>
+              <li class="footer__list-item">
+                <img
+                  src="./images/instagram_white.svg"
+                  alt="Instagram icon"
+                  class="footer__social-icon"
+                />
+                <a href="#" class="footer__social-link">Instagram</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">&copy; 2025 Collin Orendorff</p>
+      </footer>
     </div>
   </body>
 </html>
