--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
           class="header__image"
         />
         <div class="header__footer">
-          <div class="header__footer-column header__footer-column_first">
+          <div class="header__footer-column">
             <p class="header__paragraph">Hours:</p>
             <p class="header__paragraph">Monday - Friday (10:00 - 19:00)</p>
             <p class="header__paragraph">Saturday - Sunday (11:00 - 18:00)</p>
           </div>
-          <div class="header__footer-column header__footer-column_last">
+          <div class="header__footer-column">
             <p class="header__paragraph">
               200 Success Avenue, The Town of Triple Peaks
             </p>
@@ -81,40 +81,42 @@
             Check out some recipes we've collected for<br />your home-brewing
             convenience:
           </p>
-          <div class="recipes__videos">
-            <iframe
-              src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dToDgfIAqjh5_N2e"
-              title="Aeropress recipe video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-              class="recipes__iframe"
-            ></iframe>
-            <iframe
-              src="https://www.youtube.com/embed/st571DYYTR8?si=LJZkaOcodSD8qed3"
-              title="French press recipe video player"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-              class="recipes__iframe"
-            ></iframe>
-            <p class="recipes__video-caption">Aeropress recipe</p>
-            <p class="recipes__video-caption recipes__video-caption_2">
-              ~5 min
-            </p>
-            <p class="recipes__video-caption recipes__video-caption_3">
-              French press recipe
-            </p>
-            <p class="recipes__video-caption recipes__video-caption_4">
-              ~15 min
-            </p>
-          </div>
+          <ul class="recipes__videos">
+            <li>
+              <iframe
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=dToDgfIAqjh5_N2e"
+                title="Aeropress recipe video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="recipes__iframe"
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>Aeropress recipe</span>
+                <span>~5min</span>
+              </p>
+            </li>
+            <li>
+              <iframe
+                src="https://www.youtube.com/embed/st571DYYTR8?si=LJZkaOcodSD8qed3"
+                title="French press recipe video player"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+                class="recipes__iframe"
+              ></iframe>
+              <p class="recipes__video-caption">
+                <span>French press recipe</span>
+                <span>~15min</span>
+              </p>
+            </li>
+          </ul>
         </section>
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Book a table</h2>
           <form class="form reservation__form">
             <fieldset class="form__fieldset">
-              <label for="name" class="form__label form__label_first"
+              <label for="name" class="form__label form__label_type_name"
                 >Name *</label
               >
               <input
@@ -158,7 +160,7 @@
               />
             </fieldset>
             <button class="form__button" type="submit">Book a table</button>
-            <label class="form__label form__label_last">
+            <label class="form__label form__label_type_checkbox">
               <input type="checkbox" class="form__checkbox" required />
               I agree with the terms of use
             </label>
@@ -172,7 +174,7 @@
           </p>
           <div class="menu__cards">
             <div class="card">
-              <p class="card__title">Filter</p>
+              <h6 class="card__title">Filter</h6>
               <ul class="card__list">
                 <li class="card__list-item">
                   Regular (12 oz) <span class="card__list-divider"></span> $1
@@ -194,7 +196,7 @@
               </ul>
             </div>
             <div class="card">
-              <p class="card__title">Espresso</p>
+              <h6 class="card__title">Espresso</h6>
               <ul class="card__list">
                 <li class="card__list-item">
                   Macchiato <span class="card__list-divider"></span> $2.25
@@ -212,7 +214,7 @@
               </ul>
             </div>
             <div class="card">
-              <p class="card__title">Baked Goods</p>
+              <h6 class="card__title">Baked Goods</h6>
               <ul class="card__list">
                 <li class="card__list-item">
                   Almond Croissant <span class="card__list-divider"></span> $2
@@ -265,7 +267,7 @@
             class="footer__logo"
           />
           <div class="footer__column">
-            <p class="footer__social-heading">Social media</p>
+            <h6 class="footer__social-heading">Social media</h6>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <img
