Making further corrections

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   Party-size (24 oz, decaf)
                   <span class="card__list-divider"></span> $1.75
                 </li>
-                <li class="card__list-item card__list-item_last">
+                <li class="card__list-item card__list-item_last-child">
                   Iced Coffee (16 oz)
                   <span class="card__list-divider"></span> $1.25
                 </li>
